--- a/traffic_violation_app/pubspec.yaml
+++ b/traffic_violation_app/pubspec.yaml
@@ -23,6 +23,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  flutter:
+    sdk: flutter
+  url_launcher: ^6.0.9 # Add this line
+
+  font_awesome_flutter: ^10.0.0
 
 flutter:
   uses-material-design: true
