--- a/traffic_violation_app/pubspec.yaml
+++ b/traffic_violation_app/pubspec.yaml
@@ -10,28 +10,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    
-  async: ^2.11.0         # Downgraded async to be compatible with flutter_test
-  collection: ^1.18.0    # Keep collection at 1.18.0 for compatibility
-
-  cupertino_icons: ^1.0.8 # Default iOS style icons
-  http: ^1.2.2           # For making HTTP requests
-  google_maps_flutter: ^2.10.0  # Updated for Google Maps integration
-  image_picker: ^1.1.2    # Updated for picking images from the device
+  async: ^2.11.0
+  collection: ^1.18.0
+  cupertino_icons: ^1.0.8
+  http: ^1.2.2
+  google_maps_flutter: ^2.10.0
+  image_picker: ^1.0.0+3
+  url_launcher: ^6.0.9 # Moved to dependencies
+  font_awesome_flutter: ^10.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-  flutter:
-    sdk: flutter
-  url_launcher: ^6.0.9 # Add this line
-
-  font_awesome_flutter: ^10.0.0
 
 flutter:
   uses-material-design: true
   assets:
     - assets/images/dp.jpg
-    - assets/dp.jpg
-    - assets/images/logo.png
