--- a/traffic_violation_app/pubspec.yaml
+++ b/traffic_violation_app/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   image_picker: ^1.0.0+3
   url_launcher: ^6.0.9 # Moved to dependencies
   font_awesome_flutter: ^10.0.0
+  fl_chart: ^0.40.0
 
 dev_dependencies:
   flutter_test:
