--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,6 @@
             "database": "traffic_violations",
             "username": "postgres"
         }
-    ]
+    ],
+    "java.compile.nullAnalysis.mode": "automatic"
 }
