--- a/traffic_violation_app/pubspec.yaml
+++ b/traffic_violation_app/pubspec.yaml
@@ -16,9 +16,9 @@ dependencies:
   http: ^1.2.2
   google_maps_flutter: ^2.10.0
   image_picker: ^1.0.0+3
-  url_launcher: ^6.0.9 # Moved to dependencies
-  font_awesome_flutter: ^10.0.0
-  fl_chart: ^0.40.0
+  url_launcher: ^6.0.9
+  fl_chart: ^0.69.2
+  font_awesome_flutter: ^10.0.0  # Add this line
 
 dev_dependencies:
   flutter_test:
