--- a/traffic_violation_app/pubspec.yaml
+++ b/traffic_violation_app/pubspec.yaml
@@ -18,7 +18,8 @@ dependencies:
   image_picker: ^1.0.0+3
   url_launcher: ^6.0.9
   fl_chart: ^0.69.2
-  font_awesome_flutter: ^10.0.0  # Add this line
+  font_awesome_flutter: ^10.0.0
+  flutter_local_notifications: ^14.0.0
 
 dev_dependencies:
   flutter_test:
@@ -28,4 +29,6 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/images/dp.jpg
+    - assets/images/
+    - assets/icons/
+    - assets/fonts/
